# symphonic

./: .gitignore  CMakeLists.txt  build.ps1  readme.md
include/glad/: glad.h
shaders/: vertex.glsl
src/: glad.c  main.cpp
src/core/: shader.cpp  shader.h  window.cpp  window.h
